--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-md navbar-primary fixed-top bg-white" style="margin-bottom: 0px !important; padding-bottom: 0px !important;">
+<nav class="navbar navbar-expand-md navbar-primary fixed-top bg-white"
+    style="margin-bottom: 0px !important; padding-bottom: 0px !important;">
     <div class="container-fluid">
         <a class="navbar-brand" href="/adm"><img src="assets/images/Persona360LogoTexto.svg" height="50rem"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
@@ -15,12 +16,16 @@
                         type="button" role="tab" aria-controls="nav-resources" aria-selected="false"><i
                             class="bi bi-grid"></i>&nbsp;&nbsp;Aplicativos</button>
                     <button class="nav-link" id="nav-calendar-tab" data-bs-toggle="tab" data-bs-target="#nav-calendar"
-                        type="button" role="tab" aria-controls="nav-calendar" aria-selected="false"><i class="bi bi-calendar2-check"></i>&nbsp;&nbsp;Calendário</button>
+                        type="button" role="tab" aria-controls="nav-calendar" aria-selected="false"><i
+                            class="bi bi-calendar2-check"></i>&nbsp;&nbsp;Calendário</button>
                     <button class="nav-link" id="nav-config-tab" data-bs-toggle="tab" data-bs-target="#nav-config"
                         type="button" role="tab" aria-controls="nav-config" aria-selected="false"><i
                             class="bi bi-gear"></i>&nbsp;&nbsp;Configurações</button>
+                    <button class="nav-link" id="nav-terminal-tab" data-bs-toggle="tab" data-bs-target="#nav-terminal"
+                        type="button" role="tab" aria-controls="nav-terminal" aria-selected="false"><i class="bi bi-terminal"></i>&nbsp;&nbsp;Sql Server</button>
                 </div>
             </div>
         </div>
     </div>
 </nav>
+
