Sistema orientado a EVENTOS inspirado no Diagrama de Ishikawa regido pelo Ikigai

--- a/views/blocks/javascript.ejs
+++ b/views/blocks/javascript.ejs
@@ -5,3 +5,4 @@
 <script src="assets/javascript/utils/api/request.js"></script>
 <script src="assets/javascript/utils/socket/package.js"></script>
 <script src="assets/javascript/utils/socket/call.js"></script>
+<script src="assets/javascript/utils/socket/sql/sql.js"></script>
