--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -12,12 +12,9 @@
                     <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home"
                         type="button" role="tab" aria-controls="nav-home" aria-selected="false"><i
                             class="bi bi-ui-checks-grid"></i>&nbsp;&nbsp;Mesa</button>
-                    <button class="nav-link" id="nav-resources-tab" data-bs-toggle="tab" data-bs-target="#nav-resources"
-                        type="button" role="tab" aria-controls="nav-resources" aria-selected="false"><i
+                    <button class="nav-link" id="nav-apps-tab" data-bs-toggle="tab" data-bs-target="#nav-apps"
+                        type="button" role="tab" aria-controls="nav-apps" aria-selected="false"><i
                             class="bi bi-grid"></i>&nbsp;&nbsp;Aplicativos</button>
-                    <button class="nav-link" id="nav-calendar-tab" data-bs-toggle="tab" data-bs-target="#nav-calendar"
-                        type="button" role="tab" aria-controls="nav-calendar" aria-selected="false"><i
-                            class="bi bi-calendar2-check"></i>&nbsp;&nbsp;Calendário</button>
                     <button class="nav-link" id="nav-config-tab" data-bs-toggle="tab" data-bs-target="#nav-config"
                         type="button" role="tab" aria-controls="nav-config" aria-selected="false"><i
                             class="bi bi-gear"></i>&nbsp;&nbsp;Configurações</button>
@@ -28,4 +25,3 @@
         </div>
     </div>
 </nav>
-
