--- a/views/includes/config-inc.ejs
+++ b/views/includes/config-inc.ejs
@@ -1,1 +1,8 @@
-<%-include ../includes/entities-inc.ejs %>
+<div class="tab-pane fade" id="nav-config" role="tabpanel" aria-labelledby="nav-config-tab">
+    <div class="container">
+        <h4><i class="bi bi-gear"></i>&nbsp;&nbsp;Configurações</h4>
+    </div>
+    <hr>
+    <div class="container container-alert alert-config"></div>
+    <%-include ../includes/entities-inc.ejs %>
+</div>
