--- a/views/pages/adm.ejs
+++ b/views/pages/adm.ejs
@@ -8,106 +8,110 @@
         <main class="flex">
           <div class="container" id="main-adm">
             <div class="tab-content" id="nav-tabContent">
-              <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-                <div class="container">
-                  <h4><i class="bi bi-ui-checks-grid"></i>&nbsp;&nbsp;Olá Pedro Silva</h4>
-                </div>
-                <hr>
-                <div class="container container-alert"></div>
-                <%-include ../includes/adm-home-inc.ejs %>
-              </div>
-              <div class="tab-pane fade" id="nav-resources" role="tabpanel" aria-labelledby="nav-resources-tab">
-                <div class="container">
-                  <h4><i class="bi bi-grid"></i>&nbsp;&nbsp;Aplicativos</h4>
-                </div>
-                <hr>
-                <div class="container container-alert"></div>
-                <%-include ../includes/resources-inc.ejs %>
-              </div>
-              <div class="tab-pane fade" id="nav-calendar" role="tabpanel" aria-labelledby="nav-calendar-tab">
-                <div class="container">
-                  <h4><i class="bi bi-calendar2-check"></i>&nbsp;&nbsp;Calendário</h4>
-                </div>
-                <hr>
-                <div class="container container-alert"></div>
-                <%-include ../includes/calendar-inc.ejs %>
-              </div>
-              <div class="tab-pane fade" id="nav-config" role="tabpanel" aria-labelledby="nav-config-tab">
-                <div class="container">
-                  <h4><i class="bi bi-gear"></i>&nbsp;&nbsp;Configurações</h4>
-                </div>
-                <hr>
-                <div class="container container-alert"></div>
-                <%-include ../includes/config-inc.ejs %>
-              </div>
-              <div class="tab-pane fade" id="nav-terminal" role="tabpanel" aria-labelledby="nav-terminal-tab">
-                <div class="container">
-                  <h4><i class="bi bi-terminal"></i>&nbsp;&nbsp;Sql Server</h4>
-                </div>
-                <hr>
-                <div class="container container-alert"></div>
-                <div class="container form-group">
-                  <form class="form-group">
-                    <label for="text-area-query">Query</label>
-                    <textarea class="form-control font-monospace border rounded bg-light"
-                      id="text-area-query" style="height: 16rem;">SELECT * FROM SYSOBJECTS WHERE XTYPE = 'U'</textarea>
-                    <button class="form-control btn btn-sm btn-outline-success mt-2" id="runsql">Rodar <i
-                        class="bi bi-play-btn"></i></button>
-                  </form>
-                </div>
-                <div class="container mt-3" id="sql-return"></div>
-              </div>
+              <%-include ../includes/adm-desktop-inc.ejs %>
+              <%-include ../includes/apps-inc.ejs %>
+              <%-include ../includes/config-inc.ejs %>
+              <%-include ../includes/sql-inc.ejs %>
             </div>
           </div>
         </main>
         <%-include ../blocks/javascript.ejs %>
-          <script>
-
-            document.onload = ((runsql) => {
-
-              runsql.addEventListener('click', event => {
-
-                event.preventDefault()
-                call('sql', document.getElementById('text-area-query').value, sqlReturn)
-                return
-
-              })
-
-            })(document.getElementById('runsql'))
-
-            function sqlReturn(socket, received) {
-
-              let method = received.method
-              , payload = received.payload
-              , error = received.error
-
-              if(error){
-
-                alert('Erro', payload, 'danger')
-
-              } else {
-
-                if(payload === 'Aguarde retorno do servidor') {
-
-                  document.getElementById('runsql').innerHTML = payload
-                  document.getElementById('runsql').disabled = true
-
-                } else {
-
-                  let recordset = payload = JSON.stringify(payload.recordset)
-                  let columns = Object.keys(recordset[0])
-                  document.getElementById('sql-return').innerHTML = `<code>${payload}</code>`
-                  document.getElementById('runsql').innerHTML = `Rodar <i class="bi bi-play-btn"></i>`
-                  document.getElementById('runsql').disabled = false
-
-                }
-
-              }
-
-            }
-
-          </script>
     </body>
 
   </html>
   <% // flush /adm %>
+
+<!--
+Persona360
+**********
+Sistema orientado a EVENTOS inspirado no Diagrama de Ishikawa regido pelo Ikigai
+
+Definições
+**********
+
+  # Evento
+  ********
+  O fato em sí. Nem tudo é um problema (a principal diferença do Ishikawa), mas todo problema por se tornar uma oportunidade de melhorar e/ou inovar
+
+  # Causa	
+  *******
+  origem, motivo, razão de algo.
+
+    Causa principal
+    ***************
+    causas mais notáveis, causas de primeiro nível que agruparão subcausas
+
+    Causa secundária
+    ****************	
+    subcausas das causas principais, ramificação das causas principais
+
+  # Ação
+  ******
+
+    Tags
+    *******
+      1 - Agentes
+      2 - Momentos
+      3 - Classificações
+      4 - Decisões
+
+          Agente
+          *****************
+          Entidade [Nome do entidade]
+          [Detalhes da entidade]
+          [Agrupamentos da entidade]
+
+          1 - Identificação
+          2 - Decisão
+          3 - Reação
+
+          Momento
+          *******
+          Conhecer / Conquistar / Conviver
+
+          Classificação
+          *************
+
+            Evento Ordinário
+            *****************
+            evento rotineiro que obedece um calendário conhecido ou é uma reação dos agentes a um evento provocado
+            
+            Tipo
+            ****
+            Todos os eventos conhecidos
+
+            Evento Extraordinário
+            **********************
+            dificuldade na obtenção de um determinado objetivo ou resultado esperado, situação difícil que pede uma solução, no
+            Diagrama de Ishikawa, é comum que o problema apareça como uma pergunta
+
+            Tipo
+            ****
+            1 - catástrofe
+            2 - gravíssimo
+            3 - grave
+            4 - importante
+            5 - oportunidade (falso problema)
+        
+        Decisão
+        *******
+        dentro das alternativas, escolher a mais adequada segundo sua análise
+        
+  # Efeito
+  ********
+  aquilo que é produzido por uma causa, resultado, consequência
+
+  # Conclusão
+  ***********
+  
+
+˜˜˜˜˜˜
+ikigai 
+˜˜˜˜˜˜
+1 - O que amo fazer
+2 - O que posso fazer bem
+3 - O que posso ser pago para fazer
+4 - O que o mundo precisa
+5 - O que detesto fazer (adição pessoal do Pedro)
+
+-->
