Issue sqlReturn - não resolvido

--- a/views/pages/adm.ejs
+++ b/views/pages/adm.ejs
@@ -6,12 +6,11 @@
     <body>
       <%-include ../blocks/nav.ejs %>
         <main class="flex">
-          <div class="container" id="main-adm">
-            <div class="tab-content" id="nav-tabContent">
+          <div class="container-flex" id="main-adm">
+            <div class="tab-content px-4" id="nav-tabContent">
               <%-include ../includes/adm-desktop-inc.ejs %>
               <%-include ../includes/apps-inc.ejs %>
-              <%-include ../includes/config-inc.ejs %>
-              <%-include ../includes/sql-inc.ejs %>
+              <%-include ../includes/tools-inc.ejs %>
             </div>
           </div>
         </main>
@@ -24,7 +23,7 @@
 <!--
 Persona360
 **********
-Sistema orientado a EVENTOS inspirado no Diagrama de Ishikawa regido pelo Ikigai
+Sistema orientado a EVENTOS inspirado no Diagrama de Ishikawa organizado pelo pensamento Ikigai
 
 Definições
 **********
@@ -103,9 +102,8 @@ Definições
 
   # Conclusão
   ***********
-  
 
-˜˜˜˜˜˜
+  ˜˜˜˜˜˜
 ikigai 
 ˜˜˜˜˜˜
 1 - O que amo fazer
