--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -16,10 +16,7 @@
                         type="button" role="tab" aria-controls="nav-apps" aria-selected="false"><i
                             class="bi bi-grid"></i>&nbsp;&nbsp;Aplicativos</button>
                     <button class="nav-link" id="nav-config-tab" data-bs-toggle="tab" data-bs-target="#nav-config"
-                        type="button" role="tab" aria-controls="nav-config" aria-selected="false"><i
-                            class="bi bi-gear"></i>&nbsp;&nbsp;Configurações</button>
-                    <button class="nav-link" id="nav-terminal-tab" data-bs-toggle="tab" data-bs-target="#nav-terminal"
-                        type="button" role="tab" aria-controls="nav-terminal" aria-selected="false"><i class="bi bi-terminal"></i>&nbsp;&nbsp;Sql Server</button>
+                        type="button" role="tab" aria-controls="nav-config" aria-selected="false"><i class="bi bi-nut"></i>&nbsp;&nbsp;Ferramentas</button>
                 </div>
             </div>
         </div>
