--- a/views/includes/adm-desktop-inc.ejs
+++ b/views/includes/adm-desktop-inc.ejs
@@ -1,7 +1,5 @@
 <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-    <div class="container">
-        <h4><i class="bi bi-ui-checks-grid"></i>&nbsp;&nbsp;Olá Pedro Silva</h4>
-    </div>
+    <h4><i class="bi bi-ui-checks-grid"></i>&nbsp;&nbsp;Olá Pedro Silva</h4>
     <hr>
-    <div class="container container-alert alert-home"></div>
+<div class="container-alert alert-home"></div>
 </div>
