--- a/views/includes/sql-inc.ejs
+++ b/views/includes/sql-inc.ejs
@@ -1,12 +1,19 @@
-<div class="tab-pane fade" id="nav-terminal" role="tabpanel" aria-labelledby="nav-terminal-tab">
-    <div class="container">
-        <h4><i class="bi bi-terminal"></i>&nbsp;&nbsp;Sql Server</h4>
+<div class="nav flex-column tab-pane fade" id="v-pills-sql" role="tabpanel" aria-labelledby="v-pills-sql-tab">
+    <div class="mt-2">
+        <h6><i class="bi bi-terminal"></i>&nbsp;&nbsp;Sql</h6>
+        <hr>
     </div>
-    <hr>
-    <div class="container container-alert"></div>
-    <div class="container form-group">
+    <div class="container-alert"></div>
+    <div class="form-group">
         <form class="form-group">
-            <label for="text-area-query">Query</label>
+            <label for="text-area-query"><small> Os campos devem ser únicos.</small></label>
+            <div class="font-monospace text-secondary" style="font-size: 0.8rem;">
+                <p>Exemplos:<br>
+                    SELECT ID, NAME, EMAIL FROM PESSOAS WHERE NAME = 'PEDRO SILVA'<br>
+                    SELECT ID, NAME, EMAIL FROM PESSOAS WHERE NAME LIKE '%pedro%' ORDER BY NAME
+                </p>
+            </div>
+
             <textarea class="form-control font-monospace border rounded bg-light" id="text-area-query"
                 style="height: 16rem;"></textarea>
             <button class="form-control btn btn-lg btn-success mt-2" id="runsql">Rodar <i
