Ferramenta SQL em alfa teste. Tem #issue: ainda mas funciona

--- a/views/includes/sql-inc.ejs
+++ b/views/includes/sql-inc.ejs
@@ -9,13 +9,13 @@
             <label for="text-area-query"><small> Os campos devem ser únicos.</small></label>
             <div class="font-monospace text-secondary" style="font-size: 0.8rem;">
                 <p>Exemplos:<br>
-                    SELECT ID, NAME, EMAIL FROM PESSOAS WHERE NAME = 'PEDRO SILVA'<br>
+                    SELECT ID, NAME, EMAIL FROM PESSOAS WHERE NAME = 'pedro silva'<br>
                     SELECT ID, NAME, EMAIL FROM PESSOAS WHERE NAME LIKE '%pedro%' ORDER BY NAME
                 </p>
             </div>
 
             <textarea class="form-control font-monospace border rounded bg-light" id="text-area-query"
-                style="height: 16rem;"></textarea>
+                style="height: 10rem;"></textarea>
             <button class="form-control btn btn-lg btn-success mt-2" id="runsql">Rodar <i
                     class="bi bi-play-btn"></i></button>
         </form>
