Primeiro passo para isolar SQL()

--- a/views/includes/dev-inc.ejs
+++ b/views/includes/dev-inc.ejs
@@ -1,9 +1,13 @@
-<div class="nav flex-column tab-pane fade" id="v-pills-dev" role="tabpanel" aria-labelledby="v-pills-dev-tab">
+<div class="nav flex-column tab-pane fade  mb-5" id="v-pills-dev" role="tabpanel" aria-labelledby="v-pills-dev-tab">
+    <div class="mt-2">
+        <h6><i class="bi bi-code-square"></i>&nbsp;&nbsp;Dev</h6>
+        <hr>
+    </div>
     <div class="container-alert"></div>
     <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="entities-tab" data-bs-toggle="tab" data-bs-target="#entities" type="button"
-                role="tab" aria-controls="entities" aria-selected="true">Entidades</button>
+            <button class="nav-link active" id="entities-tab" data-bs-toggle="tab" data-bs-target="#entities"
+                type="button" role="tab" aria-controls="entities" aria-selected="true">Entidades</button>
         </li>
         <li class="nav-item" role="presentation">
             <button class="nav-link" id="groups-tab" data-bs-toggle="tab" data-bs-target="#groups" type="button"
@@ -11,7 +15,11 @@
         </li>
     </ul>
     <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active mt-3" id="entities" role="tabpanel" aria-labelledby="entities-tab">Entidades</div>
+        <div class="tab-pane fade show active mt-3" id="entities" role="tabpanel" aria-labelledby="entities-tab">
+
+            Entidades
+
+        </div>
         <div class="tab-pane fade mt-3" id="groups" role="tabpanel" aria-labelledby="groups-tab">Agrupamentos</div>
     </div>
 </div>
