--- a/views/includes/adm-desktop-inc.ejs
+++ b/views/includes/adm-desktop-inc.ejs
@@ -1,5 +1,6 @@
-<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-    <h4><i class="bi bi-ui-checks-grid"></i>&nbsp;&nbsp;Olá Pedro Silva</h4>
-    <hr>
+<div class="tab-pane show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+        <div class="alert alert-primary alert-dismissible show" role="alert">
+            <strong><i class="bi bi-ui-checks-grid"></i>&nbsp;&nbsp;Olá [pessoa]</strong><small> : área de trabalho</small>
+        </div>
 <div class="container-alert alert-home"></div>
 </div>
