--- a/views/includes/sql-inc.ejs
+++ b/views/includes/sql-inc.ejs
@@ -1,24 +1,26 @@
-<div class="nav flex-column tab-pane fade" id="v-pills-sql" role="tabpanel" aria-labelledby="v-pills-sql-tab">
-    <div class="mt-2">
-        <h6><i class="bi bi-terminal"></i>&nbsp;&nbsp;Sql</h6>
-        <hr>
+<div class="nav flex-column tab-pane" id="v-pills-sql" role="tabpanel" aria-labelledby="v-pills-sql-tab">
+    
+    <div class="alert alert-warning alert-dismissible show" role="alert">
+        <strong><i class="bi bi-terminal"></i>&nbsp;&nbsp;Sql</strong><small> :área restrita a <strong>especialistas</strong></small>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
+    
     <div class="container-alert"></div>
+    
     <div class="form-group">
         <form class="form-group">
-            <label for="text-area-query"><small> Os campos devem ser únicos.</small></label>
-            <div class="font-monospace text-secondary" style="font-size: 0.8rem;">
-                <p>Exemplos:<br>
-                    SELECT ID, NAME, EMAIL FROM PESSOAS WHERE NAME = 'pedro silva'<br>
-                    SELECT ID, NAME, EMAIL FROM PESSOAS WHERE NAME LIKE '%pedro%' ORDER BY NAME
-                </p>
+            <div class="text-secondary" style="font-size: 0.8rem;">
+                <label for="text-area-query" class="h6"><i class="bi bi-terminal"></i>&nbsp;&nbsp;Sql</label>
             </div>
-
-            <textarea class="form-control font-monospace border rounded bg-light" id="text-area-query"
-                style="height: 10rem;"></textarea>
-            <button class="form-control btn btn-lg btn-success mt-2" id="runsql">Rodar <i
-                    class="bi bi-play-btn"></i></button>
+            <textarea class="form-control font-monospace border rounded" id="text-area-query"
+                style="height: 10rem;"
+                placeholder="select top [número] [campos] from [tabelas] [where [condição] order by [campo ordem, ...] => [formato]]"></textarea>
+                <small>Somente o comando SELECT está habilidato</small>
+            <button class="form-control btn btn-lg btn-success mt-3" id="runsql"><i
+                    class="bi bi-terminal"></i>&nbsp;&nbsp;Executar query</button>
         </form>
     </div>
+
     <div class="container mt-3" id="sql-return"></div>
+    
 </div>
