--- a/views/includes/apps-inc.ejs
+++ b/views/includes/apps-inc.ejs
@@ -1,6 +1,8 @@
-<div class="tab-pane fade" id="nav-apps" role="tabpanel" aria-labelledby="nav-apps-tab">
-    <h4><i class="bi bi-grid"></i>&nbsp;&nbsp;Aplicativos</h4>
-    <hr>
+<div class="tab-pane" id="nav-apps" role="tabpanel" aria-labelledby="nav-apps-tab">
+            <div class="alert alert-primary alert-dismissible show" role="alert">
+                <strong><i class="bi bi-grid"></i>&nbsp;&nbsp;Aplicativos</strong><small> : área com os aplicativos disponíveis</small>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
     <div class="container-alert alert-apps"></div>
     <div class="container-apps">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#app-test">
@@ -9,7 +11,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="app-test" tabindex="-1" aria-labelledby="app-testLabel" aria-modal="true" role="dialog"
+<div class="modal" id="app-test" tabindex="-1" aria-labelledby="app-testLabel" aria-modal="true" role="dialog"
     style="display: none;">
     <div class="modal-dialog modal-fullscreen">
         <div class="modal-content">
