--- a/views/includes/entities-inc.ejs
+++ b/views/includes/entities-inc.ejs
@@ -1,48 +1,108 @@
-<% if(err){ let error=payload.err; // flush %>
+<div class="tab-pane show active mt-3" id="entities" role="tabpanel" aria-labelledby="entities-tab">
 
-    <script> alert('Erro', '<%=error%>', 'danger')</script>
+    <p>Representa pessoas, produtos, e demais <strong>entidades</strong> identificadas em seu <strong>modelo de negócio</strong></p>
 
-    <% } else { // flush %>
+    <% if(err){ let error=payload.err; // flush %>
 
-        <div class="container mt-3">
-            <h3>Entidades</h3>
-            <hr>
-            <div class="table table-responsive">
-                <table class="table table-striped table-hover">
-                    <thead>
-                        <th>Entidade</th>
-                        <th>json</th>
-                        <th class="text-center">crdate</th>
-                    </thead>
-                    <tbody>
+        <script> alert('Erro', '<%=error%>', 'danger')</script>
 
-                    <% entities=payload.entities; for(let entity in entities){ // flush %>
+        <% } else { // flush %>
+            <div class="flex-column">
+                <button class="form-control btn btn-lg btn-success mt-2" id="createentity"><i
+                        class="bi bi-box"></i>&nbsp;&nbsp;Criar Entidade</button>
+            </div>
+            <div class="flex-column mt-3">
+                <div class="alert alert-warning alert-dismissible show" role="alert">
+                    <spam class="spinner-grow spinner-grow-sm text-danger" role="status"></spam> entidades não construídas, clique no .json para informações
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                <div class="table table-responsive">
+                    <hr>
+                    <table class="table table-striped table-hover">
+                        <thead>
+                            <th>Entidade</th>
+                            <th>json</th>
+                            <th class="text-center">crdate</th>
+                        </thead>
+                        <tbody>
 
-                        <tr class="tr-<%=entities[entity].name%>">
-                            <td class="td-<%=entities[entity].name%> td-name">
-                                <%=entities[entity].name.toUpperCase()%>
-                            </td>
-                            <td class="td-<%=entities[entity].name%> td-json">
-                                <a href="javascript: call('api', { 'resource': 'database', 'workflow': 'mssql', 'object': 'table', 'module': 'create', 'entity': '<%=entities[entity].name%>' }, (retorno) => { alert('Retorno', retorno, 'info') })"
-                                    id="a-<%=entities[entity].name%>">/config/entities/<%=entities[entity].json%>
+                            <% entities=payload.entities; for(let entity in entities){ // flush %>
+
+                                <tr class="tr-<%=entities[entity].name%>">
+                                    <td class="td-<%=entities[entity].name%> td-name">
+                                        <i class="bi bi-box"></i>&nbsp;&nbsp;<%=entities[entity].name.toUpperCase()%>
+                                    </td>
+                                    <td class="td-<%=entities[entity].name%> td-json">
+                                        <a href="#" data-bs-toggle="modal" data-bs-target="#build-entity" data-bs-whatever="<%=entities[entity].name%>" class="entity-json entity-<%=entities[entity].name%>" id="a-<%=entities[entity].name%>">/config/entities/
+                                            <%=entities[entity].json%>
                                         </a>
-                            </td>
-                            <td class="td-<%=entities[entity].name%> td-crdate">
-                                <div class="text-center">
-                                    <div class="spinner-grow spinner-grow-sm text-danger" role="status">
-                                        <span class="visually-hidden">Checando...</span>
+                                    </td>
+                                    <td class="td-<%=entities[entity].name%> td-crdate">
+                                        <div class="text-center">
+                                            <div class="spinner-grow spinner-grow-sm text-danger" role="status">
+                                                <span class="visually-hidden">Checando...</span>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                <% }; // flush %>
+
+                        </tbody>
+                    </table>
+
+                    <% }; // flush %>
+
+                </div>
+                
+                <div class="modal" id="build-entity" tabindex="-1" aria-labelledby="build-entityLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="build-entityLabel">New message</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form>
+                                    <div class="mb-3">
+                                        <label for="recipient-name" class="col-form-label">Recipient:</label>
+                                        <input type="text" class="form-control" id="recipient-name">
                                     </div>
-                                </div>
-                            </td>
-                        </tr>
+                                    <div class="mb-3">
+                                        <label for="message-text" class="col-form-label">Message:</label>
+                                        <textarea class="form-control" id="message-text"></textarea>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Send message</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-                        <% }; // flush %>
+                <script>
 
-                    </tbody>
-                </table>
+                    var buildEntity = document.getElementById('build-entity')
+                        buildEntity.addEventListener('show.bs.modal', function (event) {
+                            // Button that triggered the modal
+                            var button = event.relatedTarget
+                            // Extract info from data-bs-* attributes
+                            var recipient = button.getAttribute('data-bs-whatever')
+                            // If necessary, you could initiate an AJAX request here
+                            // and then do the updating in a callback.
+                            //
+                            // Update the modal's content.
+                            var modalTitle = buildEntity.querySelector('.modal-title')
+                            var modalBodyInput = buildEntity.querySelector('.modal-body input')
 
-                <% }; // flush %>
+                            modalTitle.textContent = 'New message to ' + recipient
+                            modalBodyInput.value = recipient
+                        })
+
+                </script>
 
             </div>
-        </div>
-        <% // flush includes/adm-inc.ejs into ../pages/adm.ejs %>
+</div>
+<% // flush views/includes/entities-inc.ejs into views/includes/dev-inc.ejs %>
