Ajustes dir views / UIX

--- a/views/pages/adm.ejs
+++ b/views/pages/adm.ejs
@@ -8,9 +8,10 @@
         <main class="flex">
           <div class="container-flex" id="main-adm">
             <div class="tab-content px-4" id="nav-tabContent">
-              <%-include ../includes/adm-desktop-inc.ejs %>
-              <%-include ../includes/apps-inc.ejs %>
-              <%-include ../includes/tools-inc.ejs %>
+              <%-include ../includes/adm/desktop/desktop-inc.ejs %>
+              <%-include ../includes/adm/apps/apps-inc.ejs %>
+              <%-include ../includes/adm/governance/governance-inc.ejs %>
+              <%-include ../includes/adm/tools/tools-inc.ejs %>
             </div>
           </div>
         </main>
@@ -112,4 +113,24 @@ ikigai
 4 - O que o mundo precisa
 5 - O que detesto fazer (adição pessoal do Pedro)
 
+/////////////////////////////////////////
+
+Governança corporativa
+
+é o conjunto de:
+
+people, process, performance, purpose
+
+processos, 
+políticas, 
+regulamentos e 
+setores
+
+que regulam a maneira como uma empresa é:
+
+dirigida, 
+administrada e 
+controlada
+
+/////////////////////////////////////////
 -->
