--- a/views/includes/adm/tools/dev/tools-dev-entities-inc.ejs
+++ b/views/includes/adm/tools/dev/tools-dev-entities-inc.ejs
@@ -1,6 +1,6 @@
 <div class="tab-pane show active mt-3" id="entities" role="tabpanel" aria-labelledby="entities-tab">
 
-    <p>Representa pessoas, produtos, e demais <strong>entidades</strong> identificadas em seu <strong>modelo de negócio</strong></p>
+    <p>Representam pessoas, produtos, e demais <strong>entidades</strong> identificadas em seu <strong>modelo de negócio</strong></p>
 
     <% if(err){ let error=payload.err; // flush %>
 
