Implementação do socket.file

--- a/views/includes/adm/tools/tools-inc.ejs
+++ b/views/includes/adm/tools/tools-inc.ejs
@@ -10,7 +10,7 @@
 
             <div class="nav-link text-left" id="v-pills-dev-tab" data-bs-toggle="pill" data-bs-target="#v-pills-dev"
                 type="button" role="tab" aria-controls="v-pills-dev" aria-selected="false"><i
-                    class="bi bi-terminal"></i>&nbsp;&nbsp;Dev</div>
+                    class="bi bi-file-earmark-code-fill"></i>&nbsp;&nbsp;Dev</div>
 
             <div class="nav-link text-left" id="v-pills-sql-tab" data-bs-toggle="pill" data-bs-target="#v-pills-sql"
                 type="button" role="tab" aria-controls="v-pills-sql" aria-selected="false"><i
