--- a/views/includes/adm/tools/dev/tools-dev-inc.ejs
+++ b/views/includes/adm/tools/dev/tools-dev-inc.ejs
@@ -1,6 +1,6 @@
 <div class="nav flex-column tab-pane mb-5" id="v-pills-dev" role="tabpanel" aria-labelledby="v-pills-dev-tab">
     <div class="alert alert-warning alert-dismissible show" role="alert">
-        <strong><i class="bi bi-terminal"></i>&nbsp;&nbsp;Dev</strong> <small> : requer permissão [<strong>dev</strong>]</small>
+        <strong><i class="bi bi-file-earmark-code-fill"></i>&nbsp;&nbsp;Dev</strong> <small> : requer permissão [<strong>dev</strong>]</small>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 
