--- a/views/includes/adm/tools/sql/tools-sql-inc.ejs
+++ b/views/includes/adm/tools/sql/tools-sql-inc.ejs
@@ -15,31 +15,31 @@
                     class="bi bi-server"></i>&nbsp;&nbsp;Sql</button>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link" id="sql-result-tab" data-bs-toggle="tab" data-bs-target="#sql-result" type="button"
-                role="tab" aria-controls="sql-result" aria-selected="false"><i
-                    class="bi bi-grid-3x3"></i>&nbsp;&nbsp;Retorno</button>
+            <button class="nav-link" id="sql-server-tab" data-bs-toggle="tab" data-bs-target="#sql-server" type="button" role="tab" aria-controls="sql-server" aria-selected="false">
+                <i class="bi bi-files"></i>&nbsp;&nbsp;Retorno</button>
         </li>
     </ul>
 
-    <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="sql-terminal" role="tabpanel" aria-labelledby="sql-terminal-tab">
+    <div class="tab-content" id="sql-server-tab-content">
+
+        <div class="tab-pane show active" id="sql-terminal" role="tabpanel" aria-labelledby="sql-terminal-tab">
             <div class="form-group">
                 <form class="form-group">
                     <div class="text-secondary" style="font-size: 0.8rem;">
                         <label for="text-area-query" class="h6"></label>
                     </div>
-                    <textarea class="form-control font-monospace border rounded" id="text-area-query"
+                    <textarea class="form-control font-monospace border rounded" id="sql-server-input"
                         style="height: 10rem;"
-                        placeholder="select top [número] [campos] from [tabelas] [where [condição] order by [campo ordem, ...] => [formato]]"></textarea>
+                        placeholder="select top [número] [campos] from [tabelas] [where [condição]] order by [campo [ordem], ...] => [formato]"></textarea>
                     <small>Somente o comando SELECT está habilidato</small>
-                    <button class="form-control btn btn-lg btn-success mt-3" id="runsql"><i
+                    <button class="form-control btn btn-success mt-3" id="sql-server-btn-run"><i
                             class="bi bi-server"></i>&nbsp;&nbsp;Executar query</button>
                 </form>
             </div>
         </div>
 
-        <div class="tab-pane fade" id="sql-result" role="tabpanel" aria-labelledby="sql-result-tab">
-            <div class="container mt-3" id="sql-return"></div>
+        <div class="tab-pane" id="sql-server" role="tabpanel" aria-labelledby="sql-server-tab">
+            <div class="mt-3 text-wrap text-break" id="sql-server-target"></div>
         </div>
 
     </div>
