Adição de alertas de permissão

--- a/views/blocks/javascript.ejs
+++ b/views/blocks/javascript.ejs
@@ -6,3 +6,4 @@
 <script src="assets/javascript/tools/socket/call.js"></script>
 <script src="assets/javascript/tools/socket/sql.js"></script>
 <script src="assets/javascript/tools/socket/file.js"></script>
+<script src="assets/javascript/tools/socket/serverfunction.js"></script>
