--- a/views/includes/adm/governance/governance-inc.ejs
+++ b/views/includes/adm/governance/governance-inc.ejs
@@ -1,4 +1,9 @@
 <div class="flex tab-pane" id="nav-governance" role="tabpanel" aria-labelledby="nav-governance-tab">
+    <div class="alert alert-warning alert-dismissible show" role="alert">
+        <strong><i class="bi bi-bounding-box-circles"></i>&nbsp;&nbsp;Entidades</strong><small> : requer permissão
+            [<strong>governance</strong>]</small>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     <div id="governance"></div>
     <div class="container-alert alert-governance"></div>
 </div>
