--- a/views/includes/adm/tools/dev/tools-dev-inc.ejs
+++ b/views/includes/adm/tools/dev/tools-dev-inc.ejs
@@ -18,7 +18,7 @@
     </ul>
     
     <div class="tab-content" id="tab-tools">
-        <%-include ./tools-dev-entities-inc.ejs %>
+        <%-include ./tools-dev-entity-inc.ejs %>
         <%-include ./tools-dev-der-inc.ejs %>
     </div>
 
