--- a/views/includes/adm/tools/sql/tools-sql-inc.ejs
+++ b/views/includes/adm/tools/sql/tools-sql-inc.ejs
@@ -2,7 +2,7 @@
     
     <div class="alert alert-warning alert-dismissible show" role="alert">
         <strong><i class="bi bi-server"></i>&nbsp;&nbsp;Sql</strong><small> : requer permissão
-            [<strong>dba</strong>]</small>
+            [<strong>sql</strong>]</small>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 
