--- a/views/includes/adm/tools/tools-inc.ejs
+++ b/views/includes/adm/tools/tools-inc.ejs
@@ -1,6 +1,6 @@
 <div class="flex tab-pane" id="nav-config" role="tabpanel" aria-labelledby="nav-config-tab">
     <div class="alert alert-warning alert-dismissible show" role="alert">
-        <strong><i class="bi bi-cpu"></i>&nbsp;&nbsp;Ferramentas</strong><small> : requer permissão [<strong>gestor</strong>]</small>
+        <strong><i class="bi bi-cpu"></i>&nbsp;&nbsp;Ferramentas</strong><small> : requer permissão [<strong>tools</strong>]</small>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     <div class="d-flex align-items-start text-left">
