Entity-create parte UM

--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -16,7 +16,7 @@
                         type="button" role="tab" aria-controls="nav-apps" aria-selected="false"><i
                             class="bi bi-grid"></i>&nbsp;&nbsp;Aplicativos</button>
                             <button class="nav-link" id="nav-governance-tab" data-bs-toggle="tab" data-bs-target="#nav-governance" type="button" role="tab"
-                                aria-controls="nav-config" aria-selected="false"><i class="bi bi-bounding-box-circles"></i>&nbsp;&nbsp;Governança</button>
+                                aria-controls="nav-config" aria-selected="false"><i class="bi bi-bank"></i>&nbsp;&nbsp;Governança</button>
                     <button class="nav-link" id="nav-config-tab" data-bs-toggle="tab" data-bs-target="#nav-config"
                         type="button" role="tab" aria-controls="nav-config" aria-selected="false"><i class="bi bi-cpu"></i>&nbsp;&nbsp;Ferramentas</button>
                 </div>
