--- a/views/includes/adm/apps/apps-inc.ejs
+++ b/views/includes/adm/apps/apps-inc.ejs
@@ -23,7 +23,7 @@
             </div>
             <div class="modal-body">
                 <div class="alert alert-warning alert-dismissible show" role="alert">
-                    <strong><i class="bi bi-bounding-box-circles"></i>&nbsp;&nbsp;Entidades</strong><small> : requer
+                    <strong><i class="bi bi-arrows-fullscreen"></i>&nbsp;&nbsp;App</strong><small> : requer
                         permissão
                         [<strong>app-id</strong>]</small>
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
