Ajuste UIX tools-dev

--- a/views/includes/adm/tools/tools-inc.ejs
+++ b/views/includes/adm/tools/tools-inc.ejs
@@ -8,6 +8,12 @@
         <div class="nav flex-column nav-pills me-3" style="width: 9rem !important;" id="v-pills-tab" role="tablist"
             aria-orientation="vertical">
 
+            <div class="nav-link text-left" type="button" role="tab">
+                <div class="form-check form-switch pr-0 mr-0 align-middle">
+                    <input class="form-check-input" type="checkbox" id="checkbox-dismiss-all-alerts" entityfieldformtype="checkbox" checked><span class="text-primary" id="checkbox-dismiss-all-alerts-tag"><i class="bi bi-tags-fill"></i></span>
+                </div> 
+            </div>
+
             <div class="nav-link text-left" id="v-pills-dev-tab" data-bs-toggle="pill" data-bs-target="#v-pills-dev"
                 type="button" role="tab" aria-controls="v-pills-dev" aria-selected="false"><i
                     class="bi bi-file-earmark-code-fill"></i>&nbsp;&nbsp;Dev</div>
