--- a/views/includes/adm/tools/dev/tools-dev-der-inc.ejs
+++ b/views/includes/adm/tools/dev/tools-dev-der-inc.ejs
@@ -1,7 +1,7 @@
 <div class="tab-pane mt-3" id="der" role="tabpanel" aria-labelledby="der-tab" id="der">
         <div class="alert alert-warning alert-dismissible show" role="alert">
-            <strong><i class="bi bi-bounding-box"></i>&nbsp;&nbsp;Relacionamentos</strong><small> : requer permissão
-                [<strong>der</strong>]</small>
+            <strong><i class="bi bi-bounding-box"></i>&nbsp;&nbsp;Relacionamentos</strong><small>
+                [<strong>tools-dev-der</strong>]</small>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     <div class="alert alert-info alert-dismissible show" role="alert">
