--- a/views/includes/adm/tools/dev/tools-dev-entity-inc.ejs
+++ b/views/includes/adm/tools/dev/tools-dev-entity-inc.ejs
@@ -1,7 +1,7 @@
 <div class="tab-pane show active mt-3" id="entities" role="tabpanel" aria-labelledby="entities-tab">
     <div class="alert alert-warning alert-dismissible show" role="alert">
-        <strong><i class="bi bi-box"></i>&nbsp;&nbsp;Entidades</strong><small> : requer permissão
-            [<strong>entity</strong>]</small>
+        <strong><i class="bi bi-box"></i>&nbsp;&nbsp;Entidades</strong> <small> : requer permissão
+            [<strong>tools-dev-entity</strong>]</small>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     <div class="alert alert-info alert-dismissible show" role="alert"><i class="bi bi-box"></i>&nbsp;
@@ -13,16 +13,17 @@
         <script> alert('Erro', '<%=error%>', 'danger')</script>
         <% } else { // flush %>
             <div class="flex-column mt-3" id="entity-div-add">
-                <span class="btn btn-success mr-2 mb-2" id="entity-btn-add">
-                    <i class="bi bi-box"></i>&nbsp;&nbsp;<i class="bi bi-plus-square-dotted"></i>
+                <span class="btn btn-sm btn-outline-success mr-2 mb-2" id="entity-btn-add">
+                    <i class="bi bi-plus-square"></i>
                 </span>
                 <% entities=payload.entities; for(let entity in entities){ // flush %>
-                    <span class="btn btn-outline-success mr-2 mb-2 entity-btn-<%=entities[entity].name%>">
+                    <span class="btn btn-sm btn-outline-success mr-2 mb-2 entity-btn-<%=entities[entity].name%>">
                         <i class="bi bi-box"></i>&nbsp;&nbsp;<%=entities[entity].name%>
                     </span>
                     <% }; }; // flush %>
             </div>
             <%-include ./tools-dev-entity-create-inc.ejs %>
-            
+
 </div>
-<% // flush views/includes/adm/tools/dev/tools-dev-entities-inc.ejs into views/includes/adm/tools/dev/tools-dev-inc.ejs %>
+<% // flush views/includes/adm/tools/dev/tools-dev-entities-inc.ejs into views/includes/adm/tools/dev/tools-dev-inc.ejs
+    %>
